Added CMake files for asio library

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,8 +5,11 @@ list(APPEND CMAKE_MODULE_PATH "${CMAKE_CURRENT_SOURCE_DIR}/cmake")
 
 set(package_name network)
 
+add_subdirectory(extern)
+
 # Create targets and set properties
 add_library(${PROJECT_NAME}
+    "src/Node.cpp"
 )
 
 add_library(${package_name}::${PROJECT_NAME} ALIAS ${PROJECT_NAME})
