Added publish fxn skeleton to TcpPublisher

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -35,6 +35,7 @@ target_compile_features(${PROJECT_NAME}
         cxx_generic_lambdas
         cxx_lambdas
         cxx_lambda_init_captures
+        cxx_range_for
 )
 
 add_subdirectory(tests)
