Incorporated TcpSubscriber in CMakeLists

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -11,6 +11,7 @@ add_subdirectory(extern)
 add_library(${PROJECT_NAME}
     "src/Node.cpp"
     "src/TcpPublisher.cpp"
+    "src/TcpSubscriber.cpp"
 )
 
 add_library(${package_name}::${PROJECT_NAME} ALIAS ${PROJECT_NAME})
