Added zlib as a dependency in CMake

--- a/extern/CMakeLists.txt
+++ b/extern/CMakeLists.txt
@@ -1,2 +1,15 @@
 add_subdirectory(asio)
+
 add_subdirectory(flatbuffers)
+
+add_subdirectory(zlib)
+
+target_include_directories(zlib INTERFACE
+    "$<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}>"
+    "$<BUILD_INTERFACE:${CMAKE_CURRENT_BINARY_DIR}>"
+)
+
+target_include_directories(zlibstatic INTERFACE
+    "$<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}>"
+    "$<BUILD_INTERFACE:${CMAKE_CURRENT_BINARY_DIR}>"
+)
