Added turbojpeg as a dependency

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -28,6 +28,7 @@ target_include_directories(${PROJECT_NAME}
 target_link_libraries(${PROJECT_NAME} PUBLIC
     asio::asio
     flatbuffers
+    turbojpeg-static
     zlibstatic
 )
 
