--- a/extern/CMakeLists.txt
+++ b/extern/CMakeLists.txt
@@ -2,6 +2,20 @@ add_subdirectory(asio)
 
 add_subdirectory(flatbuffers)
 
+# libjpeg-turbo library
+add_subdirectory(libjpeg-turbo)
+
+target_include_directories(turbojpeg INTERFACE
+    "$<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}>"
+    "$<BUILD_INTERFACE:${CMAKE_CURRENT_BINARY_DIR}>"
+)
+
+target_include_directories(turbojpeg-static INTERFACE
+    "$<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}>"
+    "$<BUILD_INTERFACE:${CMAKE_CURRENT_BINARY_DIR}>"
+)
+
+# zlib library
 add_subdirectory(zlib)
 
 target_include_directories(zlib INTERFACE
