Disabled build of libjpeg-turbo shared library

--- a/extern/libjpeg-turbo/CMakeLists.txt
+++ b/extern/libjpeg-turbo/CMakeLists.txt
@@ -139,7 +139,7 @@ macro(boolean_number var)
   endif()
 endmacro()
 
-option(ENABLE_SHARED "Build shared libraries" TRUE)
+option(ENABLE_SHARED "Build shared libraries" FALSE)
 boolean_number(ENABLE_SHARED)
 option(ENABLE_STATIC "Build static libraries" TRUE)
 boolean_number(ENABLE_STATIC)
