--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -9,9 +9,10 @@ add_subdirectory(extern)
 
 # Create targets and set properties
 add_library(${PROJECT_NAME}
-    "src/Compression.cpp"
     "src/Node.cpp"
     "src/Rate.cpp"
+    "src/TcpPublisher.cpp"
+    "src/TcpSubscriber.cpp"
 )
 
 add_library(${package_name}::${PROJECT_NAME} ALIAS ${PROJECT_NAME})
