Added helper functions for converting btwn Images and msg buffers

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -9,6 +9,7 @@ add_subdirectory(extern)
 
 # Create targets and set properties
 add_library(${PROJECT_NAME}
+    "src/Image.cpp"
     "src/Node.cpp"
     "src/Rate.cpp"
     "src/TcpPublisher.cpp"
